/*
 * $Id$
 */

2012-08-21 09:55 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/xerror.ch
     * minor code cleanup

2012-08-17 09:51 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/hrbcompat/errorsys/wxherrorsys.prg
     ! trapped div by zero error

  *  wxHarbour.hbp
     * removed compiler flag -ks

2012-08-13 14:57 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
     % public function made static

  *  src/common/wxhfuncs.prg
     * some minor cleanup to make PP happy (bad things happened when -ks flag was enabled, seems that
       expressions like funcx()["key"]["key"] := someValue , failed)

  *  wxHarbour.hbp
     - flag -ks enabled: now index on strings can be assigned also ( a[x] := someValue )

2012-03-14 13:08 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     ! Fixed PROPERTY command without explicit READ clause

2012-03-08 11:02 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     * updated

2012-03-08 09:02 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     * upadted

2012-03-08 08:39 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     * updated

2012-03-05 11:50 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     * synched with oordb

  *  src/common/wxhfuncs.prg
     * added protection against null param value

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
     * changed order of params for __wxh_BrowseAddColumn()

2012-02-29 17:52 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/property.ch
     * command PROPERTY ... DEFAULT changed to PROPERTY ... VALUE

2012-02-29 17:35 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
     ! added protection against re-define NTrim

  *  src/common/wxhutils.prg